--- a/package.json
+++ b/package.json
@@ -8,18 +8,20 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.0",
     "express": "^4.18.2",
+    "express-graphql": "^0.12.0",
     "node": "^20.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4",
     "webpack-cli": "^5.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "node server/server.js",
+    "develop": "concurrently \"cd server && npm run watch\" \"cd client && npm start\"",
+    "install": "cd server && npm i && cd ../client && npm i",
+    "build": "cd client && npm run build"
   },
   "eslintConfig": {
     "extends": [
