--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "node": "^20.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4",
     "webpack-cli": "^5.1.4"
