--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 
 # dependencies
 /node_modules
-server/node_modules
-client/node_modules
+server/node_modules/
+client/node_modules/
 /.pnp
 .pnp.js
 
