--- a/package.json
+++ b/package.json
@@ -3,14 +3,12 @@
   "version": "1.0.0",
   "description": "",
   "main": "server/server.js",
-  "proxy": "http://localhost:3000/",
   "scripts": {
-    "start": "node server/server.js --ignore client",
+    "start": "node server/server.js",
     "develop": "concurrently \"cd server && npm run watch\" \"cd client && npm start\"",
     "install": "cd server && npm i && cd ../client && npm i",
     "seed": "cd server && npm run seed",
-    "build": "cd client && npm run build"
-  },
+    },
   "keywords": [],
   "author": "",
   "license": "ISC",
